--- a/homepage.html
+++ b/homepage.html
@@ -72,7 +72,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link  scrollto" href="#portfolio">Works</a></li>
-          <li><a class="nav-link  scrollto" href="index.html">Portfolio</a></li>
+          <li><a class="nav-link  scrollto" href="https://reanzoldyck007.github.io/modified/">Portfolio</a></li>
           
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
